changed css path

--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&family=Share+Tech:wght@400&display=swap" rel="stylesheet">
 
     <!-- custom css -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}?{% now 'U' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %}?{% now 'U' %}"> -->
+    <link rel="stylesheet" href="static/css/styles.css">
 
     <!-- custom js -->
     <script src="{% static 'js/utils.js' %}"></script>
