settings for css

--- a/template/index.html
+++ b/template/index.html
@@ -12,7 +12,7 @@
 
     <!-- custom css -->
     <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %}?{% now 'U' %}"> -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
     <!-- custom js -->
     <script src="{% static 'js/utils.js' %}"></script>
