--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,5 @@
-{% load static %}
-
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +11,7 @@
 
     <!-- custom css -->
     <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %}?{% now 'U' %}"> -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <!-- custom js -->
     <script src="{% static 'js/utils.js' %}"></script>
