--- a/template/index.html
+++ b/template/index.html
@@ -449,7 +449,7 @@
             </div>
             <hr style="border-color: rgba(255,255,255,0.2); margin: 30px 0 20px;">
             <div class="text-center">
-                <p style="color: rgba(255,255,255,0.6); margin: 0;">&copy; 2025 Organic Daana. All rights reserved.</p>
+                <p style="color: rgba(255,255,255,0.6); margin: 0;">&copy; 2025 Organic Daana | All Rights Reserved</p>
             </div>
         </div>
     </footer>
